--- a/style.css
+++ b/style.css
@@ -1,7 +1,74 @@
 html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
+  background-color: lightblue;
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+
+  /* This centers our sketch vertically. */
+  align-items: center;
 }
 canvas {
   display: block;
 }
+button {
+  background-color: #a7f442;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-shadow: 3px 2px black;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 80px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s;
+  /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 50%;
+}
+button:hover{
+  background-color: #4CAF50;
+  color: white
+}
+
+/*Flexbox
+1) container for create/join/box items
+2) container for start*/
+
+.container{
+  flex:1;
+  height: calc(100vh - 100px);
+  display:flex;
+  flex-direction: column;
+  flex-basis:auto;
+  flex-wrap: wrap;
+  justify-content: space-between;/*main axis (vertically)*/
+  align-items:center;/*cross axis (horizontal)*/
+  text-align: top;
+  text-shadow: 3px 2px black;
+  text-decoration: none;
+  font-size: 50px;
+}
+.child {
+  align-self: flex-start;
+  margin: 0 auto !important; 
+  /* !important used for this example only to override foundation.css*/
+}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  
+  
+
+}
+
+
