--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
   color: white;
   padding: 15px 32px;
   text-align: center;
-  text-shadow: 3px 2px black;
+  text-shadow: 5px 4px black;
   text-decoration: none;
   display: inline-block;
   font-size: 80px;
@@ -66,9 +66,13 @@ input[type=text], select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  
-  
-
+  flex-grow:5;
+  font-size:44px
 }
+
+.bigitem { 
+  flex-basis: 1;
+} /* flex-grow, flex-shrink, flex-basis */
+
 
 
